<resources>
    <string name="app_name">My Application</string>
    <string name="button1">Wybierz punkt</string>
    <string name="button2">Zmień oświetlenie</string>
    <string name="button3">Dodatki</string>
    <string name="button4">Kompas</string>
    <string name="button5">Latarka</string>
    <string name="button6">Aparat</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="aptur_io">ApTur.io</string>
    <string name="adujemy_j_dla_ciebie">Ładujemy ją dla ciebie :)</string>
    <string name="dodatki">Dodatki</string>
</resources>