<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background_main"
tools:context=".Dodatki">

    <Button
        android:id="@+id/button6"
        android:layout_width="374dp"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/button6"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/button5"
        android:layout_width="374dp"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="127dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/button5"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/button4"
        android:layout_width="374dp"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="219dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/button4"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="normal" />

    <ImageView
    android:layout_width="200dp"
    android:layout_height="200dp"
    app:srcCompat="@drawable/icon_main"
    android:id="@+id/imageView"
    android:layout_centerHorizontal="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="125dp"
    />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/dodatki"
        android:textColor="#000000"
        android:textSize="66sp" />



</RelativeLayout>